Changed the sizing of the image to match the original - also changed the dth paramater on the image link to prevent the image from being blurry

--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ body {
     height: 100vh;
   }
 img {
-    height: 100%;
+    height: 153vh;
     width: 100%; 
+    object-fit: cover;
     display: block;
 }
 .image-container {
